# safety_corridor

./: CMakeLists.txt  LICENSE
cmake/: Dependencies.cmake
cmake/macros/: Message.cmake  Vendors.cmake
cmake/modules/: FindEIGEN.cmake  FindJSON.cmake  FindOPENCV.cmake  FindSPDLOG.cmake
example/: CMakeLists.txt  main.cpp
python/: visual.py
safety_corridor/: CMakeLists.txt
safety_corridor/include/: Corridor2d.h
safety_corridor/src/: Corridor2d.cpp
scripts/: build.sh  run_example.sh
